--- a/views/partials/_javascripts.html.haml
+++ b/views/partials/_javascripts.html.haml
@@ -2,6 +2,7 @@
 = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"
 = javascript_include_tag "http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"
 = javascript_include_tag "http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"
+= javascript_include_tag "jquery.typewrite.js"
 
 - # custom
 = javascript_include_tag "carlos.js"
