--- a/views/partials/_javascripts.html.haml
+++ b/views/partials/_javascripts.html.haml
@@ -5,6 +5,7 @@
 = javascript_include_tag "jquery.typewrite.js"
 
 - # custom
+= javascript_include_tag "application.js"
 = javascript_include_tag "carlos.js"
 = javascript_include_tag "console.js"
 
