--- a/views/index.html.haml
+++ b/views/index.html.haml
@@ -1,15 +1,17 @@
 - content_for :head do
   %title The Middleman!
   
-#console
-  #title_bar
-  #content
-    #output
-      %p Welcome to CarlosRamirezIII.com
-      %p For assistance, type 'help'
-      %p 
+#wrap
+  #console
+    #title_bar
+      %span Terminal - bash
+    #content
+      #output
+        %p Welcome to CarlosRamirezIII.com
+        %p For assistance, type 'help'
+        %p 
+          %span >
+          %span.typewrite carlos = Person.find_by_name("Carlos Ramirez III")
+      #prompt
         %span >
-        %span.typewrite carlos = Person.find_by_name("Carlos Ramirez III")
-    #prompt
-      %span >
-      = text_field_tag :input
+        = text_field_tag :input
