Improved error messages

--- a/views/index.html.haml
+++ b/views/index.html.haml
@@ -1,5 +1,5 @@
 - content_for :head do
-  %title The Middleman!
+  %title Carlos Ramirez III
   
 #wrap
   #console
@@ -8,7 +8,8 @@
     #content
       #output
         %p Welcome to CarlosRamirezIII.com
-        %p For assistance, type 'help'
+        %p Type 'help' for a list of methods
+        %p ==================================
         %p 
           %span >
           %span.typewrite carlos = Person.find_by_name("Carlos Ramirez III")
