Fixed bug with IE8. Updated jquery

--- a/source/partials/_javascripts.html.haml
+++ b/source/partials/_javascripts.html.haml
@@ -1,5 +1,5 @@
 - # libraries
-= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"
+= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
 = javascript_include_tag "head.min.js"
 = javascript_include_tag "jquery.typewrite.js"
 
