Added Google Analytics tracking

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -9,6 +9,7 @@
     = stylesheet_link_tag "site.css"
 
     = partial "partials/javascripts"
+    = partial "partials/google_analytics"
 
     = yield_content :head
     
