--- a/source/layout.haml
+++ b/source/layout.haml
@@ -12,6 +12,8 @@
 
     = yield_content :head
     
+    = partial "partials/google_analytics"
+    
   %body{ :class => page_classes }
 
     #main{ :role => "main" }
